[gd_scene load_steps=3 format=3 uid="uid://dasm81cf0anio"]

[ext_resource type="Script" path="res://Levels/Menus/Pause/pause_menu.gd" id="1_0m83g"]
[ext_resource type="FontFile" uid="uid://dsiq71gdmciaj" path="res://Art/Free/Menu/Text/static/RobotoSerif_72pt-Bold.ttf" id="2_gsmxs"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0m83g")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.568627)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -149.0
offset_right = 152.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gsmxs")
theme_override_font_sizes/font_size = 50
text = "Resume
"

[node name="ReturnToMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = 68.0
offset_right = 152.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gsmxs")
theme_override_font_sizes/font_size = 50
text = "Return to menu"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = 196.0
offset_right = 152.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gsmxs")
theme_override_font_sizes/font_size = 50
text = "Quit
"

[node name="PauseText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 16.0
offset_right = 159.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("2_gsmxs")
theme_override_font_sizes/normal_font_size = 65
text = "Paused"

[connection signal="button_down" from="Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="ReturnToMenu" to="." method="_on_return_to_menu_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
